<resources>
    <string name="app_name">BLE-Verify</string>

    <string name="scan_qr_code">Scan QR Code</string>
    <string name="permission_required_toast">Required Camera Permission.</string>
    <string name="header_scan_record">Scan Record</string>
    <string name="please_scan_qr_code">Place a barcode inside the viewfinder rectangle to scan it</string>
    <string name="nothing">Nothing</string>

    <!-- label items -->
    <string name="sid_desc">SID</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="scan_or_input">Scan or input SID</string>
    <string name="stop">Stop</string>
    <string name="mac_address">Mac:</string>
    <string name="verify">Verify</string>
    <string name="ble_connecting">BLE Connecting</string>
    <string name="bluetooth_connecting">Bluetooth Connecting</string>
    <string name="please_input_sid">Please input SID</string>
    <string name="sid_format_error">SID format error</string>
    <string name="discover_finish">Discover finish</string>
    <string name="start_discover">Start discover</string>
    <string name="label_rssi">RSSI:</string>
</resources>
