<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.immotor.ble.verify.MainActivity">

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/scan_qr_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/sid_desc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/connect"/>
            <EditText
                android:id="@+id/scan_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_connect"
                android:layout_marginRight="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:hint="@string/scan_or_input"
                android:text=""
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16sp"
                android:background="@color/colorPrimary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/mac_address"/>

                <TextView
                    android:id="@+id/mac_address_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:text=""/>

                <TextView
                    android:id="@+id/rssi_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ble_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/ble_connecting"/>

                <ProgressBar
                    android:id="@+id/ble_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
                <ImageView
                    android:id="@+id/ble_result_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:background="@mipmap/icon_right"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bluetooth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="visible"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:text="@string/bluetooth_connecting"/>

                <ProgressBar
                    android:id="@+id/bluetooth_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    />
                <ImageView
                    android:id="@+id/bluetooth_result_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:background="@mipmap/ic_launcher"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
